--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+### Ignore the .idea folder and all its contents
+.idea
+.idea/
+.idea/*
+.idea/**
